--- a/tests/canvasnoise.html
+++ b/tests/canvasnoise.html
@@ -36,7 +36,8 @@
 			<div class="btn-left">
 				<span class="btn9 btn" onClick="run()">[ re-run ]</span>
 				<span><input id="optSolid" type="checkbox"> use a solid color</span>
-				<span><input id="optStroke" type="checkbox"> use strokeText</span><br><br>
+				<span><input id="optStroke" type="checkbox"> use strokeText</span>
+				<span><input id="optOffscreen" type="checkbox"> use offscreen canvas</span><br><br>
 			</div>VISUALS</td></tr>
 		<tr><td class="bottom padr">control</td>
 			<td>
@@ -63,6 +64,8 @@
 						&nbsp; &#9664; toDataURL &nbsp;
 					<img id="cnvBlob" width="20" height="20" style="border:1px solid white;" src="">
 						&nbsp; &#9664; toBlob
+					<canvas id="cnvBitmap" width="20" height="20" style="border:1px solid white;" src=""></canvas>
+						&nbsp; &#9664; imageBitmap
 				</span>
 			</td>
 		</tr>
@@ -104,13 +107,14 @@ function run() {
 
 	let optSolid = dom.optSolid.checked
 	let optStroke = dom.optStroke.checked
+	let optOffscreen = dom.optOffscreen.checked
 
 	// pause so users see change
 	setTimeout(function(){
 		try {
 			let t0 = performance.now()
 			let cnvBig = dom.cnvBig
-			let cnvCtrl = dom.cnvCtrl
+			let cnvCtrl = optOffscreen ? new OffscreenCanvas(20, 20) : dom.cnvCtrl;
 			if (cnvBig.getContext) {
 				let ctxBig = cnvBig.getContext('2d'),
 					ctxCtrl = cnvCtrl.getContext('2d'),
@@ -242,14 +246,24 @@ function run() {
 				let imageData = ctxCtrl.getImageData(0,0, cnvCtrl.width, cnvCtrl.height)
 				ctxGet2.putImageData(imageData, 0, 0)
 
-				// toDataURL
-				let dataURL = cnvCtrl.toDataURL("image/png")
-				cnvURL.src = dataURL
+				// toDataURL (not available in offscreen canvases)
+				if (cnvCtrl.toDataURL) {
+					let dataURL = cnvCtrl.toDataURL("image/png")
+					cnvURL.src = dataURL
+				} else {
+					cnvURL.src = "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAAD0lEQVR4AQEEAPv/AP8AAAMBAQCNHeWCAAAAAElFTkSuQmCC" // 1x1 red png
+				}
 
 				// toBlob
 				cnvCtrl.toBlob(function(blob) {
 					let url = URL.createObjectURL(blob)
 					cnvBlob.src = url
+				})
+
+				// With an image bitmap
+				window.createImageBitmap(cnvCtrl).then(bitmap => {
+					dom.cnvBitmap.getContext('2d').drawImage(bitmap, 0, 0)
+					bitmap.close()
 				})
 
 				// 1st read
